--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-﻿# Frontend Environment Variables
+﻿# Example Frontend Environment Variables
+# Copy this file to .env and update the values for your environment
 
-# API URL (without /api suffix)
-VITE_API_URL=http://localhost:8000
+# API Base URL - Update this to your production API URL
+VITE_API_BASE_URL=https://dogtorvet-api.onrender.com/api
 
-# Environment
-VITE_ENV=development
+# App Configuration
+VITE_APP_NAME=DogTorVet Services
+VITE_APP_VERSION=1.0.0
+
+# Development settings
+VITE_DEBUG=false
